# Gravity

./: .dir-locals.el  .dockerignore  .gitignore  CONTRIBUTING.md  INSTALL-Windows.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  ci-build.sh  configure.ac  hash-xdrs.sh  install-rust.sh
.devcontainer/: README.md
Builds/VisualStudio/: stellar-core.sln  stellar-core.vcxproj  stellar-core.vcxproj.filters
docker/: Dockerfile  Dockerfile.testing  Makefile  README.md
docs/: architecture.md  db-schema.md  fuzzing.md  gramr_example.cfg  gramr_standalone.cfg  gravity_testnet_validator.cfg  history.md  integration.md  ledger.md  metrics.md  quick-reference.md  stellar-core_example.cfg  stellar-core_testnet_validator.cfg  tx-simulation.md  versioning-soroban.md
docs/software/: admin.md  commands.md  ledger_query_examples.md  performance.md  security-protocol-release-notes.md  testnet.md
lib/soci/src/core/: backend-loader.cpp
performance-eval/: performance-eval.md
scripts/: OverlaySurvey.py  README.md
src/: Makefile.am
src/bucket/: BucketManagerImpl.cpp
src/catchup/: CatchupConfiguration.h  CatchupWork.cpp  VerifyLedgerChainWork.cpp
src/crypto/: readme.md
src/database/: Database.cpp  Database.h  readme.md
src/herder/: QuorumIntersectionCheckerImpl.h  Upgrades.cpp
src/herder/test/: TransactionQueueTests.cpp  UpgradesTests.cpp
src/history/: HistoryArchive.cpp  HistoryArchiveManager.h  HistoryManager.h  readme.md
src/history/test/: SerializeTests.cpp
src/historywork/: GetHistoryArchiveStateWork.cpp  PutHistoryArchiveStateWork.cpp
src/invariant/: ConservationOfGrams.cpp  ConservationOfGrams.h
src/invariant/test/: ConservationOfLumensTests.cpp
src/ledger/: LedgerManagerImpl.cpp  LedgerTxnTrustLineSQL.cpp  NetworkConfig.h  readme.md
src/ledger/test/: LedgerCloseMetaStreamTests.cpp
src/main/: Application.h  ApplicationImpl.cpp  ApplicationUtils.cpp  ApplicationUtils.h  CommandHandler.cpp  CommandLine.cpp  Config.cpp  Config.h  ErrorMessages.h  GramrVersion.cpp.in  GramrVersion.h  GravityVersion.cpp.in  main.cpp
src/main/test/: ApplicationUtilsTests.cpp  ConfigTests.cpp
src/process/: ProcessManagerImpl.cpp
src/protocol-curr/xdr/: Stellar-ledger-entries.x  Stellar-ledger.x
src/rust/: Cargo.toml
src/rust/src/: lib.rs  log.rs
src/scp/: LocalNode.h  readme.md
src/test/: fuzz.cpp  run-selftest-nopg  run-selftest-pg  selftest-parallel  test.cpp
src/transactions/: MergeOpFrame.cpp  PaymentOpFrame.cpp  readme.md
src/transactions/test/: InvokeHostFunctionTests.cpp  MergeTests.cpp  OfferTests.cpp  PathPaymentStrictSendTests.cpp  PathPaymentTests.cpp  PaymentTests.cpp
src/util/: Math.h  Timer.h  types.h
test-tx-meta-baseline-current/: MergeTests.json  OfferTests.json  PathPaymentStrictSendTests.json  PathPaymentTests.json  PaymentTests.json
test-tx-meta-baseline-next/: MergeTests.json  OfferTests.json  PathPaymentStrictSendTests.json  PathPaymentTests.json  PaymentTests.json
